--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "google-map-react": "^2.2.5",
     "next": "15.1.8",
     "react": "^19.0.0",
