--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@react-google-maps/api": "^2.20.6",
     "dotenv": "^16.5.0",
     "google-map-react": "^2.2.5",
+    "lucide-react": "^0.525.0",
     "next": "15.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
