--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,16 @@
     "dotenv": "^16.5.0",
     "google-map-react": "^2.2.5",
     "lucide-react": "^0.525.0",
-    "next": "15.1.8",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "^15.4.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/google-map-react": "^2.1.10",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.8",
     "postcss": "^8",
